--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.cbp
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.cbp
@@ -6,7 +6,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Unix_x86">
-				<Option output="../Output/x86/Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option output="../Output/x86/Unix/ArduinoCommDLLx86" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Intermediate/x86/Unix/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -22,14 +22,14 @@
 					<Add option="-m32" />
 				</Linker>
 				<ExtraCommands>
-					<Add after="ln -sf $(TARGET_OUTPUT_FILE) ../Output/$(TARGET_OUTPUT_BASENAME).so.1.0" />
-					<Add after="ln -sf $(TARGET_OUTPUT_FILE) ../Output/$(TARGET_OUTPUT_BASENAME).so.1" />
-					<Add after="ln -sf $(TARGET_OUTPUT_FILE) ../Output/$(TARGET_OUTPUT_BASENAME).so" />
-					<Add after="ldconfig -n ../Output" />
+					<Add after="ln -sf $(PROJECT_DIR)$(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).so.1.0" />
+					<Add after="ln -sf $(PROJECT_DIR)$(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).so.1" />
+					<Add after="ldconfig -n $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
+					<Mode after="always" />
 				</ExtraCommands>
 			</Target>
 			<Target title="Unix_x64">
-				<Option output="../Output/x64/Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option output="../Output/x64/Unix/ArduinoCommDLLx64" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Intermediate/x64/Unix/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -44,17 +44,17 @@
 					<Add option="-m64" />
 				</Linker>
 				<ExtraCommands>
-					<Add after="ln -sf $(TARGET_OUTPUT_FILE) ../Output/$(TARGET_OUTPUT_BASENAME).so.1.0" />
-					<Add after="ln -sf $(TARGET_OUTPUT_FILE) ../Output/$(TARGET_OUTPUT_BASENAME).so.1" />
-					<Add after="ln -sf $(TARGET_OUTPUT_FILE) ../Output/$(TARGET_OUTPUT_BASENAME).so" />
-					<Add after="ldconfig -n ../Output" />
+					<Add after="ln -sf $(PROJECT_DIR)$(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).so.1.0" />
+					<Add after="ln -sf $(PROJECT_DIR)$(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).so.1" />
+					<Add after="ldconfig -n $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
+					<Mode after="always" />
 				</ExtraCommands>
 			</Target>
 			<Target title="Unix_ARM">
-				<Option output="../Output/ARM/Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option output="../Output/ARM/Unix/ArduinoCommDLLARM" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Intermediate/ARM/Unix/" />
 				<Option type="3" />
-				<Option compiler="gnu_gcc_49_compiler" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -66,8 +66,8 @@
 					<Add option="-marm" />
 				</Linker>
 				<ExtraCommands>
-					<Add after="ln -sf $(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)lib$(TARGET_OUTPUT_BASENAME).so.1.0" />
-					<Add after="ln -sf $(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)lib$(TARGET_OUTPUT_BASENAME).so.1" />
+					<Add after="ln -sf $(PROJECT_DIR)$(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).so.1.0" />
+					<Add after="ln -sf $(PROJECT_DIR)$(TARGET_OUTPUT_FILE) $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).so.1" />
 					<Add after="ldconfig -n $(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
 					<Mode after="always" />
 				</ExtraCommands>
@@ -105,7 +105,7 @@
 				</Linker>
 			</Target>
 			<Target title="Matlab_Unix_ARM">
-				<Option output="../Output/ARM/MatLab_Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option output="../Output/ARM/MatLab_Unix/libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Intermediate/ARM/MatLab_Unix/" />
 				<Option type="3" />
 				<Option compiler="gnu_gcc_49_compiler" />
