--- a/ArduinoCommSuite/ArduinoCommTest/ArduinoCommTest.cbp
+++ b/ArduinoCommSuite/ArduinoCommTest/ArduinoCommTest.cbp
@@ -16,13 +16,13 @@
 					<Add option="-std=c++11" />
 					<Add option="-m32" />
 					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
-					<Add option="-lArduinoCommDLL" />
+					<Add option="-lArduinoCommDLLx86" />
 					<Add option="-D_UNIX" />
 				</Compiler>
 				<Linker>
 					<Add option="-m32" />
-					<Add option="-L../Output" />
-					<Add library="ArduinoCommDLL.x86" />
+					<Add option="-lArduinoCommDLLx86" />
+					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
 				</Linker>
 			</Target>
 			<Target title="Unix_x64">
@@ -35,32 +35,32 @@
 					<Add option="-std=c++11" />
 					<Add option="-m64" />
 					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
-					<Add option="-lArduinoCommDLL" />
+					<Add option="-lArduinoCommDLLx64" />
 					<Add option="-D_UNIX" />
 				</Compiler>
 				<Linker>
 					<Add option="-m64" />
+					<Add option="-lArduinoCommDLLx64" />
 					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
-					<Add library="ArduinoCommDLL" />
 				</Linker>
 			</Target>
 			<Target title="Unix_ARM">
 				<Option output="../Output/ARM/Unix/ArduinoCommTest" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Intermediate/ARM/Unix" />
 				<Option type="1" />
-				<Option compiler="gnu_gcc_49_compiler" />
+				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-std=c++11" />
 					<Add option="-marm" />
 					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
-					<Add option="-lArduinoCommDLL.ARM" />
+					<Add option="-lArduinoCommDLLARM" />
 					<Add option="-D_UNIX" />
 					<Add directory="../Output" />
 				</Compiler>
 				<Linker>
 					<Add option="-marm" />
-					<Add option="-lArduinoCommDLL.ARM" />
+					<Add option="-lArduinoCommDLLARM" />
 					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
 					<Add directory="../Output" />
 				</Linker>
